# condapp

./: .gitignore  CMakeLists.txt  main.cpp  measurementsimulator.cpp  measurementsimulator.h  recounthelper.cpp  recounthelper.h  resources.qrc  stylehelper.cpp  stylehelper.h  units_template.xml  userwindow.cpp  userwindow.h
